--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,12 +1,22 @@
 * {
     font-family: Gotham, Arial, sans-serif;
+    background-color: var(--pink);
+}
+
+:root {
+    --brown: #927c70;
+    --pink: #EAD1d1;
+    --lightB: #d9c7b2
 }
 
 header {
-    display: flex;
     position: fixed;
+    top: 0;
+    min-height: 75px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    margin-top: -10px;
 }
 
 header h1 {
@@ -43,7 +53,7 @@ a:link, a:visited {
 }
 
 a:hover {
-    color:burlywood;
+    color: var(--brown);
 }
 
 #login-btn {
@@ -52,4 +62,28 @@ a:hover {
     border-radius: 5px;
     margin: auto;
     margin-right: 30px;
+}
+
+.container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#time {
+    display: flex;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    margin-top: 30%;
+    align-items: center;
+}
+
+#time h2 {
+    align-self: center;
+}
+
+div.minutes, div.seconds {
+    font-size: 100px;
+    color: var(--brown);
 }
