--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -73,17 +73,13 @@ a:hover {
 #time {
     display: flex;
     margin: auto;
-    width: 50%;
+    width: 100%;
     padding: 10px;
-    margin-top: 30%;
-    align-items: center;
+    margin-top: 10%;
 }
 
 #time h2 {
-    align-self: center;
-}
-
-div.minutes, div.seconds {
+    text-align: center;
     font-size: 100px;
     color: var(--brown);
 }
