--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -143,7 +143,7 @@ div #controls {
     bottom: 44.63%;
 
     color: var(--grey);
-    font-size: 30px;
+    font-size: 40px;
 }
 
 #right-arrow {
@@ -155,7 +155,7 @@ div #controls {
     bottom: 44.63%;
 
     color: var(--grey);
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .reset-icon {
@@ -185,7 +185,7 @@ div #controls {
 
 .task-info {
     margin: 20px auto auto auto;
-    width: 50%;
+    width: 35%;
 
     background-color: var(--white);
     padding: 10px;
@@ -194,4 +194,37 @@ div #controls {
     text-align: center;
 
     border-radius: 25px;
+}
+
+#curr-task {
+    font-size: 1.5em;
+}
+
+#next-task{
+    color: #737373;
+}
+
+.task-heading {
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: -5px;
+}
+
+#task-input {
+    align-self: center;
+    margin: 0px auto auto 40%;
+    width: 275px;
+}
+
+#task-list {
+    width: 20%;
+	height: auto;
+	display: block;
+	margin: 10px auto 10% auto;
+	color: #F3F3F3;
+    padding: 1rem 3rem;
+    border-radius: 12px;
+    color: black;
+
+    background-color: var(--white)
 }
